--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                         <hr>
                         <div class="m-3 p-3 bottom-acc-profile">
                             <p class="mb-3">Connect to account</p>
-                            <button type="button" class="btn btn-light">Add Bank</button>
-                            <br>
+                            <button type="button" class="btn btn-light mb-3">Add Bank</button>
                             <div id="bankLists">
                                 <div class="p-3 mb-3 custom-div">
                                     <ul class="custom-list">
@@ -65,7 +64,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-light">Connect to Mobile</button>
+                            <button type="button" class="btn btn-light mb-3">Connect to Mobile</button>
                             <div id="bankLists">
                                 <div class="p-3 mb-3 custom-div">
                                     <ul class="custom-list">
@@ -89,7 +88,28 @@
             </div>
             <div class="col-sm-12 col-md-4 mb-3">
                 <div class="custom-container p-3">
-                    
+                    <div class="custom-container-img p-3">
+                        <div class="inline-img-heading">
+                            <img src="assets/img/na-planner.png" alt="">
+                        </div>
+                        <h5 class="display-8 m-3 text-secondary inline-img-heading">Norma Events Planner</h5>
+                        <hr>
+                        <p class="mb-3 text-left">Discover your planner list</p>
+                        <button type="button" class="btn btn-outline-secondary mb-3">Create New Event</button>
+                        <div class="m-1 p-3 events" id="eventsLists">
+                            <div class="p-3 mb-3 custom-div event-list">
+                                <ul class="custom-list">
+                                    <li id="eventName">Event Name</li>
+                                    <li id="startDate">01/02/2024</li>
+                                    <li id="eventDes">Description goes here</li>
+                                    <hr>
+                                    <li>Allocated Amount : <span id="alcAmount">82892</span></li>
+                                    <li>Duration: <span id="duration">3</span><span id="timeSpan">Months</span></li>
+                                    <li>Days Left: <span id="daysLeft">25</span>Days</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
