--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body onload="checkPercentageChange()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -54,13 +54,14 @@
                         <hr>
                         <div class="m-3 p-3 bottom-acc-profile">
                             <p class="mb-3">Connect to account</p>
-                            <button type="button" class="btn btn-light mb-3">Add Bank</button>
+                            <button type="button" class="btn btn-light mb-3" id="openBankButton">Add Bank</button>
                             <div id="bankLists">
                                 <div class="p-3 mb-3 custom-div">
                                     <ul class="custom-list">
                                         <li id="bankName">KCB Bank</li>
                                         <li id="accountName">John Doe</li>
-                                        <li id="accountNumber">0393827736654624772653503</li>
+                                        <li id="accountNumber"></li>
+                                        
                                     </ul>
                                 </div>
                             </div>
@@ -84,6 +85,49 @@
                     </div>
                     <h5 class="display-8 m-3 text-uppercase text-secondary inline-img-heading">Norma Account Monitor</h5>
                     <hr>
+                    <div class="m-0 p-3 account-track">
+                        <h3 class="m-1 fs-5 display-8">Balances</h3>
+                        <div class="m-1 p-2 balances-cont">
+                            <h3 class="m-1 fs-5 display-6">Outstanding Balance</h3>
+                            <div class="mb-3  out-balance">
+                                <div class="fs-4 display-8" id="staticBalance">Ksh.12,000</div>
+                                <span id="percentChange">+23%</span>
+                            </div>
+                            <h3 class="m-1 fs-5 display-6">Mobile Account Balance</h3>
+                            <div class="mb-3  out-balance">
+                                <div class="fs-7 display-8" id="mobBalance">Ksh.7000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <h3 class="m-3 fs-5 display-8">Transaction tracks</h3>
+                    <div class="mt-3 mb-3 account-track receipts">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                              <div class="d-flex w-100 justify-content-between">
+                                <h6 class="mb-1">Withdrawal</h5>
+                                <small>3 days ago</small>
+                              </div>
+                              <p class="mb-1">Transaction Code: Not Avaiable</p>
+                              <small>Amount Ksh.<span id="transAmount">370</span></small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                  <h6 class="mb-1">Withdrawal</h5>
+                                  <small>5 days ago</small>
+                                </div>
+                                <p class="mb-1" id="des">Withdrawn from Bank Account</p>
+                                <small>Amount Ksh.<span id="transAmount">370</span></small>
+                              </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                              <div class="d-flex w-100 justify-content-between">
+                                <h6 class="mb-1">Deposit</h5>
+                                <small class="text-body-secondary">18 days ago</small>
+                              </div>
+                              <p class="mb-1">Deposited into Mobile Account</p>
+                              <small>Amount Ksh.<span id="transAmount">370</span></small>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4 mb-3">
@@ -109,13 +153,66 @@
                                 </ul>
                             </div>
                         </div>
+                        <div>
+                            
+                        </div>
+                        <button type="button" class="btn btn-outline-warning m-3">Refresh Account</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+
+    <!--
+        Overlays and popup windows goes here...
+    -->
+    <!-- Add Bank details -->
+    <div class="overlay-dark" id="bankPopupOverlay"></div>
+    <div id="bankPopup" class="p-4">
+        <h3 class="mb-3 fs-5 display-8">Add Bank Account</h3>
+        <p>Link your Bank Card to Norma Assistant to help you track your account</p>
+        <form>
+            <div class="mb-3">
+              <label for="bankSelect" class="form-label">Bank Account</label>
+              <select class="form-select" aria-label="Default select example" id="bankSelect">
+                <option selected value="">Select bank</option>
+                <option value="KCB Bank">KCB Bank</option>
+                <option value="Equity Bank">Equity Bank</option>
+                <option value="Coperative Bank">Coperative Bank</option>
+                <option value="Family Bank">Family Bank</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="accountnumber" class="form-label">Account Number</label>
+              <input type="text" class="form-control" id="accountnumber" maxlength="24" oninput="formatAccountNumber(this)">
+            </div>
+            <div class="mb-3">
+                <label for="expiry" class="form-label">Expiration Date</label>
+                <input type="text" class="form-control" id="expiry" maxlength="5" oninput="formatExpiration(this)">
+            </div>
+            <div class="mb-3">
+                <label for="cvc" class="form-label">CVC Code</label>
+                <input type="number" class="form-control" id="cvc" maxlength="3" oninput="formatCVC(this)">
+            </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="terms">
+              <label class="form-check-label" for="terms">Agree to terms and conditions</label>
+            </div>
+            <div class="bottom-form-btn">
+                <button type="submit" class="btn btn-primary" id="bankSubmit">Check Account</button>
+                <div class="loading-circle"></div>
+                <div class="fs-7" id="loadStatus">Checking account...</div>
+            </div>
+          </form>
+    </div>
+
+    <!-- Status Bar -->
+
+    <div class="p-3" id="statusBar">Status Message goes here...</div>
+
     <!-- JS links (jQuery and Bootstrap JS) -->
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
