--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body onload="checkPercentageChange()">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -31,17 +31,78 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signup.html">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container">
-        
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="custom-container signup-left">
+                    <h3 class="display-8 fs-4 text-secondary p-3 text-uppercase">Geek Technologies&reg;</h3>
+                    <h4 class="display-8 m-3">Norma Assistant</h4>
+                    <hr>
+                    <div class="banner-container pb-5">
+                        <img src="assets/img/na-logo.png" alt="" class="mt-1">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="custom-container signup-right">
+                    <div class="signup-cont p-2">
+                        <h3 class="display-8 fs-4 text-secondary p-3 text-uppercase">Login</h3>
+                        <div class="p-3 mb-2 w-100" id="status">Norma Assitant account</div>
+                        <form id="loginForm">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email Address</label>
+                                <input type="email" class="form-control" id="email" placeholder="e.g someone@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password">
+                            </div> 
+                            <div class="mb-3">
+                                <button type="submit" class="btn btn-secondary">Log in</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault(); // Prevent the default form submission
+
+            var email = document.getElementById('email').value;
+            var password = document.getElementById('password').value;
+            var formData = new FormData();
+            formData.append('email', email);
+            formData.append('password', password);
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', 'php/login_process.php', true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var response = JSON.parse(xhr.responseText);
+                    if (response.success) {
+                        window.location.href = 'index.html'; // Redirect on success
+                    } else {
+                        document.getElementById('status').textContent = response.message;
+                    }
+                }
+            };
+            xhr.send(formData);
+        });
+    </script>
         
     <!-- JS links (jQuery and Bootstrap JS) -->
-    <script src="js/script.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
